--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "xstring": "cpp",
         "esp32-hal-touch.c": "cpp",
         "esp32-hal-ledc.c": "cpp",
-        "utility": "cpp"
+        "utility": "cpp",
+        "iosfwd": "cpp"
     }
 }
