--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,11 @@
         "rope": "cpp",
         "slist": "cpp",
         "initializer_list": "cpp",
-        "valarray": "cpp"
+        "valarray": "cpp",
+        "random": "cpp",
+        "*.tcc": "cpp",
+        "ostream": "cpp",
+        "unordered_map": "cpp",
+        "iostream": "cpp"
     }
 }
