--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -60,6 +60,30 @@
         "scoped_allocator": "cpp",
         "sstream": "cpp",
         "stdexcept": "cpp",
-        "streambuf": "cpp"
+        "streambuf": "cpp",
+        "xiosbase": "cpp",
+        "algorithm": "cpp",
+        "allocators": "cpp",
+        "forward_list": "cpp",
+        "ios": "cpp",
+        "iterator": "cpp",
+        "list": "cpp",
+        "set": "cpp",
+        "unordered_set": "cpp",
+        "vector": "cpp",
+        "xfacet": "cpp",
+        "xfunctional": "cpp",
+        "xhash": "cpp",
+        "xlocale": "cpp",
+        "xlocinfo": "cpp",
+        "xlocmon": "cpp",
+        "xlocnum": "cpp",
+        "xloctime": "cpp",
+        "xmemory": "cpp",
+        "xmemory0": "cpp",
+        "xstddef": "cpp",
+        "xtr1common": "cpp",
+        "xtree": "cpp",
+        "xutility": "cpp"
     }
 }
